# ToolHive

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
critic/: __init__.py  calibration.py  verifier.py
dashboard/: __init__.py  alerts.py  api.py  metrics.py
feedback/: __init__.py  store.py
pipeline/: __init__.py  cluster.py  datagen.py  eval.py  finetune.py  loop.py  providers.py
router/: __init__.py  orchestrator.py  router.py
scheduler/: __init__.py  live_monitor.py  retrain.py  state.py
scripts/: init_demo.py
server/: app.py
specialists/: registry.py
specialists/domains/crm/: tools.yaml
specialists/domains/email/: tools.yaml
specialists/domains/inventory/: tools.yaml
specialists/runtime/: harness.py  parser.py  provider_harness.py  schema.py
tests/: test_harness.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
