[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolhive"
version = "0.1.0"
description = "Self-healing swarm of specialist tool-calling agents"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "torch>=2.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "accelerate>=0.34.0",
]

[project.optional-dependencies]
pipeline = [
    "openai>=1.40.0",
]
router = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]
train = [
    "trl>=0.11.0",
    "sentence-transformers>=3.0",
    "hdbscan>=0.8",
    "scikit-learn>=1.5",
    "datasets>=3.0",
    "numpy>=1.26",
]
serve = [
    "vllm>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["specialists*", "pipeline*", "router*", "critic*", "feedback*", "scheduler*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
